# privacy-backend

./: .gitignore  Dockerfile  debug_log.txt  docker-compose.yaml  ngrok.yaml  proofs.csv  proofs.txt
privacy-backend/: main.py  pyproject.toml
